<resources>
    <string name="app_name">Delivery</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="LoginStatus">Login...</string>
    <string name="PreOrder">Preorder</string>
    <string name="Order">Order</string>
    <string name="ServerAddress">Server address</string>
    <string name="ServerPort">Server port</string>
    <string name="LoginStatusFailed">Login failed</string>
    <string name="DeliveryAgent">DeliveryAgent</string>
    <string name="TaxNumber">Tax number</string>
    <string name="TaxName">Tax name</string>
    <string name="MarketName">Market name</string>
    <string name="Contact">Contact name</string>
    <string name="Phone">Phone number</string>
    <string name="Code">Code</string>
    <string name="Address">Address</string>
    <string name="Customer">Customer</string>
    <string name="Goods">Goods</string>
    <string name="Bill">Bill</string>
    <string name="LoginStatusGoodsGroups">Loading groups of goods</string>
    <string name="LoginStatusGoods">Loading goods</string>
    <string name="Append">Append</string>
    <string name="Ready">Ready</string>
    <string name="TotalAmount">Total amount</string>
    <string name="_999_999_00">999.999,00</string>
    <string name="Cash">Cash</string>
    <string name="BankTransfer">Bank transfer</string>
    <string name="Credit">Credit</string>
    <string name="WriteOrder">Write order</string>
    <string name="PartnerIsUndefined">Partners Is Undefined</string>
    <string name="GoodsListIsEmpty">Goods list empty</string>
    <string name="Close">Close</string>
    <string name="InvalidTotalAmount">Invalid Total Amount</string>
    <string name="OrderSaved">Order saved</string>
    <string name="NewSale">New\nsale</string>
    <string name="SalesToday">Sales\ntoday</string>
    <string name="YouMustAllowToAccessLocationService">To continue using application You should have to permit location service</string>
    <string name="FullName">Full name</string>
    <string name="Logout">Logout</string>

</resources>
