<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SalesTodayActivity"
    android:padding="@dimen/margin">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TotalAmount"
            android:textSize="@dimen/textFontSize"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/_999_999_00"
            android:textSize="@dimen/textFontSize"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cash"
            android:textSize="@dimen/textFontSize"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvTotalCash"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/_999_999_00"
            android:textSize="@dimen/textFontSize"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BankTransfer"
            android:textSize="@dimen/textFontSize"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvTotalBank"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/_999_999_00"
            android:textSize="@dimen/textFontSize"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Credit"
            android:textSize="@dimen/textFontSize"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvTotalDept"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/_999_999_00"
            android:textSize="@dimen/textFontSize"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

</LinearLayout>