<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context=".Activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Login"
            android:textSize="@dimen/textFontSize"
            app:layout_constraintBottom_toBottomOf="@+id/edUsername"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Password"
            android:textSize="@dimen/textFontSize"
            app:layout_constraintBottom_toBottomOf="@+id/edPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="@dimen/textFontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="@dimen/textFontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edUsername" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edPassword"
            app:srcCompat="@drawable/config" />

        <ImageButton
            android:id="@+id/btnEnter"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edPassword"
            app:srcCompat="@drawable/enter" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/btnEnter"
            app:layout_constraintTop_toBottomOf="@id/edPassword" />

        <TextView
            android:id="@+id/tvLoginStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/LoginStatus"
            android:textSize="@dimen/textFontSize"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEnter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llWorking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/FullName"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textBigFontSize"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llWorkingLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOrder"
                android:layout_width="@dimen/bigButtonSize"
                android:layout_height="@dimen/bigButtonSize"
                android:drawableTop="@drawable/dllcheckout"
                android:text="@string/NewSale"
                android:textSize="@dimen/textFontSize" />

            <Button
                android:id="@+id/btnSales"
                android:layout_width="@dimen/bigButtonSize"
                android:layout_height="@dimen/bigButtonSize"
                android:drawableTop="@drawable/dllpreorder"
                android:text="@string/SalesToday"
                android:textSize="@dimen/textFontSize" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="@dimen/bigButtonSize"
                android:layout_height="@dimen/bigButtonSize"
                android:drawableTop="@drawable/dllexit"
                android:text="@string/Logout"
                android:textSize="@dimen/textFontSize" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>