<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OrderActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/dllmarket"
            android:text="@string/Customer"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnGoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/dllmarketorder"
            android:text="@string/Goods"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/dllbill"
            android:text="@string/Bill"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <fragment
            android:id="@+id/fragment"
            android:name="com.e.delivery.Fragments.FREmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_empty" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>